Add EXP0-benchmark diagrams, update script

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -161,21 +161,19 @@
 \begin{IEEEkeywords}
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
+\tikzsetnextfilename{Exp0_serialize_benchmark}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp0_deserialize_benchmark}
+        \caption{Benchmark-De/Serialize}
+\end{figure*}
 
-% \tikzsetnextfilename{Exp0_serialize_benchmark}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp0_serialize_benchmark}
-%         \caption{Benchmark-Serialize}
-% \end{figure*}
-
-% \tikzsetnextfilename{Exp0_deserializebenchmark}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp0_deserialize_benchmark}
-%         \caption{Benchmark-Deserialize}
-% \end{figure*}
-
+\tikzsetnextfilename{Exp0_metadata}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp0_metadata}
+        \caption{Benchmark-Deserialize}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_single}
 %     \begin{figure*}[h]
@@ -247,19 +245,19 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2:Random Taskset = False (Single)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_parallel_all}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_parallel_all}
-        \caption{Experiment2:Seq (Parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_parallel_all}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_parallel_all}
+%         \caption{Experiment2:Seq (Parallel)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_parallel_all}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_parallel_all}
-        \caption{Experiment2:Random (Parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_parallel_all}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_parallel_all}
+%         \caption{Experiment2:Random (Parallel)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp2_legend_single}
 %     \begin{figure*}[h]
@@ -274,10 +272,6 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \input{figures/Exp2_legend_parallel}
 %         \caption{Experiment2: Parallel (legend)}
 % \end{figure*}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
 
 % \tikzsetnextfilename{Exp5_network}
 %     \begin{figure*}[h]
