--- a/Experiments/plot/figures/Exp1_write_parallel.tex
+++ b/Experiments/plot/figures/Exp1_write_parallel.tex
@@ -137,7 +137,9 @@
 		ybar stacked,        
 		ymode=log,
 		ymin=0.5,
+		log ticks with fixed point,
 		x tick label style={/pgf/number format/1000 sep=},
+		y tick label style={/pgf/number format/1000 sep={}},
 		ymax=1000,		
 		scaled y ticks=false,		  
 		enlarge y limits={0.45,upper},		
