update EXP1 single thread write diagram

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -161,26 +161,26 @@
 \begin{IEEEkeywords}
 Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 \end{IEEEkeywords}}
-\tikzsetnextfilename{Exp0_serialize_benchmark}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp0_deserialize_benchmark}
-        \caption{Benchmark-De/Serialize}
-\end{figure*}
-
-\tikzsetnextfilename{Exp0_metadata}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp0_metadata}
-        \caption{Benchmark-Deserialize}
-\end{figure*}
-
-% \tikzsetnextfilename{Exp1_write_single}
+% \tikzsetnextfilename{Exp0_serialize_benchmark}
 %     \begin{figure*}[h]
 %         \centering
-%         \input{figures/Exp1_write_single}
-%         \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
+%         \input{figures/Exp0_deserialize_benchmark}
+%         \caption{Benchmark-De/Serialize}
 % \end{figure*}
+
+% \tikzsetnextfilename{Exp0_metadata}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp0_metadata}
+%         \caption{Benchmark-Deserialize}
+% \end{figure*}
+
+\tikzsetnextfilename{Exp1_write_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp1_write_single}
+        \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_parallel}
 %     \begin{figure*}[h]
