Update plot scripts

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -175,12 +175,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Benchmark-Deserialize}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp1_write_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp1_write_single}
-        \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp1_write_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp1_write_single}
+%         \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp1_write_parallel}
 %     \begin{figure*}[h]
@@ -252,12 +252,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2:Seq (Parallel)}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp2_rand_read_parallel_all}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_rand_read_parallel_all}
-%         \caption{Experiment2:Random (Parallel)}
-% \end{figure*}
+\tikzsetnextfilename{Exp2_rand_read_parallel_all}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_parallel_all}
+        \caption{Experiment2:Random (Parallel)}
+\end{figure*}
 
 % \tikzsetnextfilename{Exp2_legend_single}
 %     \begin{figure*}[h]
