--- a/Experiments/plot/figures/Exp2_rand_read_parallel_all.tex
+++ b/Experiments/plot/figures/Exp2_rand_read_parallel_all.tex
@@ -75,32 +75,35 @@
 
     \begin{axis}
         [
-        ymode=log,    
-        ymin=0,
-        y tick label style={/pgf/number format/1000 sep={}},   
-        scaled y ticks=false,
-        scaled x ticks=false,
-        tick label style={/pgf/number format/fixed},
-        enlarge x limits=0.03,
-        ylabel={Execution Time[min.]},
-        xlabel={$\#$ Read Objects},
-        xtick pos=left,
-        ytick pos=left,
-        ytick align=outside,
-        xtick align=outside,
-        yticklabel style = {font=\Large},
-        ylabel style = {font=\Large},
-        xticklabel style = {font=\Large},
-        xtick=data,
-        xtick={2000000,4000000,6000000,8000000,10000000},
-        xticklabels={2M,4M,6M,8M,10M},
-        xlabel style = {font=\Large, yshift=-7pt},
-        height=1\columnwidth,
-        width=0.45\textwidth,
-        grid=both,
-        grid style=dotted,
-        minor grid style={gray!50},
-        every axis plot/.append style={line width=0.7pt},
+            ymin=0.8,
+            ymode=log,    
+            ymax=30,
+            y tick label style={/pgf/number format/1000 sep={}},   
+            scaled y ticks=false,
+            scaled x ticks=false,
+            tick label style={/pgf/number format/fixed},
+            ytick={0.8, 1, 1.5, 2.5, 5,10, 20, 30},
+            yticklabels={0,1, 1.5, 2.5, 5,10, 20, 30},
+            enlarge x limits=0.03,
+            ylabel={Execution Time[min.]},
+            xlabel={$\#$ Read Objects},
+            xtick pos=left,
+            ytick pos=left,
+            ytick align=outside,
+            xtick align=outside,
+            yticklabel style = {font=\Large},
+            ylabel style = {font=\Large},
+            xticklabel style = {font=\Large},
+            xtick=data,
+            xtick={2000000,4000000,6000000,8000000,10000000},
+            xticklabels={2M,4M,6M,8M,10M},
+            xlabel style = {font=\Large, yshift=-7pt},
+            height=1\columnwidth,
+            width=0.45\textwidth,
+            grid=both,
+            grid style=dotted,
+            minor grid style={gray!50},
+            every axis plot/.append style={line width=0.7pt},
         ]
         \addDiagramExpThree{}{};
     \end{axis}
