Plot new network results

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -252,12 +252,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2:Seq (Parallel)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_parallel_all}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_parallel_all}
-        \caption{Experiment2:Random (Parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_parallel_all}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_parallel_all}
+%         \caption{Experiment2:Random (Parallel)}
+% \end{figure*}
 
 % \tikzsetnextfilename{Exp2_legend_single}
 %     \begin{figure*}[h]
@@ -273,12 +273,12 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2: Parallel (legend)}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp5_network}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp5_network}
-%         \caption{Experiment5: (Network)}
-% \end{figure*}
+\tikzsetnextfilename{Exp5_network}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp5_network}
+        \caption{Experiment5: (Network)}
+\end{figure*}
 
 
 % \tikzsetnextfilename{Exp4_externalsort}
