--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -11,17 +11,26 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: numpy in /home/saeed/.local/lib/python3.10/site-packages (1.23.4)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: scipy in /home/saeed/.local/lib/python3.10/site-packages (1.9.2)\n",
       "Requirement already satisfied: numpy<1.26.0,>=1.18.5 in /home/saeed/.local/lib/python3.10/site-packages (from scipy) (1.23.4)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m22.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -42,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,27 +269,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def results():\n",
-    "    root_path = '../results'    \n",
+    "    root_path = '../archive/results'    \n",
     "\n",
-    "    write_results = [f'{root_path}/Java_Experiment1_Write_times.dat',\n",
-    "                    f'{root_path}/Experiment1_Write_times.dat']\n",
-    "    read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
-    "    load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
-    "    network_results = [f'{root_path}/Experiment4_ExternalSort_times.dat'] \n",
-    "    externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
+    "    # write_results = [f'{root_path}/Java_Experiment1_Write_times.dat',\n",
+    "    #                 f'{root_path}/Experiment1_Write_times.dat']\n",
+    "    # read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
+    "    # load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
+    "    network_results = [f'{root_path}/CPP_Experiment4_Network_ExternalSort_times.dat',\n",
+    "                       f'{root_path}/Java_Experiment4_Network_ExternalSort_times.dat',\n",
+    "                       f'{root_path}/Rust_Experiment4_Network_ExternalSort_times.dat'] \n",
+    "    # externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
     "   \n",
-    "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
-    "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
+    "    # read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
+    "    # load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
     "    network_header = [\"baseline\",\"language\",\"execution\",\"time\"]  \n",
-    "    externalsort_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"chunk_size\",\"nrow\",\"time\"]  \n",
+    "    #externalsort_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"chunk_size\",\"nrow\",\"time\"]  \n",
     "\n",
     "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
-    "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
+    "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
     "                \"JsonRust\",\"BincodeRust\",\"MessagePackRust\",\"BsonRust\",\"FlexBufRust\"]    \n",
     "\n",
     "     \n",
@@ -293,46 +304,46 @@
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
     "\n",
-    "    df_write = merge_results(write_results)    \n",
-    "    df_read = merge_results(read_results)\n",
-    "    df_load = merge_results(load_to_memory_results)   \n",
-    "    # df_network = merge_results(network_results)   \n",
+    "    # df_write = merge_results(write_results)    \n",
+    "    # df_read = merge_results(read_results)\n",
+    "    # df_load = merge_results(load_to_memory_results)   \n",
+    "    df_network = merge_results(network_results)   \n",
     "    # df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
-    "    df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "                                      seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
+    "    # df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "    #                                   seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
     "\n",
-    "    df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
-    "                                      seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
+    "    # df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
+    "    #                                   seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
     "\n",
     "\n",
-    "    df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "                                       seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
+    "    # df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "    #                                    seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
     "\n",
-    "    df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
-    "                                       seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "    # df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
+    "    #                                    seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
     "\n",
-    "    df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "                                       seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "    # df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "    #                                    seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
     "\n",
-    "    df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
-    "                                       seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
+    "    # df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
+    "    #                                    seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
     "\n",
     "                         \n",
     "\n",
-    "    # df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
+    "    df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
     "    # df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
-    "   #      \n",
+    "        \n",
     "               \n",
-    "    df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
-    "    df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
-    "    df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
-    "    df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
-    "    df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
-    "    df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
-    "   # df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
-    "   # df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
+    "    # df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
+    "    # df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
+    "    # df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
+    "    # df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
+    "    # df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
+    "    # df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
+    "    df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
+    "#    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
     "\n",
     "\n",
@@ -341,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
