--- a/Experiments/plot/figures/Exp5_network.tex
+++ b/Experiments/plot/figures/Exp5_network.tex
@@ -3,9 +3,9 @@
 	\makeatletter
 	\pgfplots@stacked@isfirstplottrue
 	\makeatother
-	\addplot [forget plot,draw=none] coordinates{({HandcodedCPP},0.01) ({inPlaceCPP},0.01) ({FlatBufCPP},0.01) ({ProtoBufCPP},0.01) 
-	({BoostCPP},0.01) ({BsonCPP},0.01) ({MessagePackRust},0.01) ({BincodeRust},0.01) ({JsonRust},0.01) ({FlexBufRust},0.01) ({BsonRust},0.01) ({Json+GzipJava},0.01) 
-	({JsonJava},0.01) ({BsonJava},0.01) ({DefaultJava},0.01) ({ProtoBufJava},0.01) ({ByteBufferJava},0.01) ({FlatBufJava},0.01) ({KryoJava},0.01)};
+	\addplot [forget plot,draw=none] coordinates{({HandcodedCPP},0.01)({ProtoBufCPP},0.01) ({FlatBufCPP},0.01) ({inPlaceCPP},0.01) ({BoostBinaryCPP},0.01)({BoostCPP},0.01)  ({BsonCPP},0.01)
+	 ({BincodeRust},0.01)({MessagePackRust},0.01)  ({JsonRust},0.01) ({FlexBufRust},0.01) ({BsonRust},0.01) 
+	 ({ProtoBufJava},0.01)({FlatBufJava},0.01)({KryoJava},0.01)({ByteBufferJava},0.01)({BsonJava},0.01)({DefaultJava},0.01)({JsonJava},0.01)  ({Json+GzipJava},0.01)};
 }
 \makeatother
 
@@ -22,7 +22,8 @@
 	   every node near coord/.append style={		  
 		   check for zeronan/.code={
 			   \pgfkeys{/pgf/fpu=true}
-			   \showvalue{\xbaseline}{inPlaceCPP}{}{}{}{}{}{}{}{}
+			   \showvalue{\xbaseline}{HandcodedCPP}{inPlaceCPP}{FlatBufCPP}{ProtoBufCPP}{BoostBinaryCPP}{BincodeRust}{JsonRust}{FlexBufRust}{}
+			   \showvalue{\xbaseline}{FlatBufJava}{ProtoBufJava}{KryoJava}{}{}{}{}{}{}
 			   \pgfkeys{/pgf/fpu=false}
 		   },
 		   check for zeronan,
@@ -129,7 +130,7 @@
 		axis line style={gray},
 		ybar stacked,        
 		ymode=log,
-		ymin=0.1,
+		ymin=0.9,
 		x tick label style={/pgf/number format/1000 sep=},
 		ymax=1000,		
 		scaled y ticks=false,		  
@@ -145,8 +146,9 @@
 		x label style={yshift=-20pt},
 		xtick=data,
 		height=0.55\columnwidth,  
-		symbolic x coords={ HandcodedCPP, inPlaceCPP, FlatBufCPP, ProtoBufCPP, BoostCPP, BsonCPP, MessagePackRust, BincodeRust, JsonRust, FlexBufRust, BsonRust, Json+GzipJava, JsonJava, BsonJava, DefaultJava, ProtoBufJava, ByteBufferJava, FlatBufJava, KryoJava},		   
-		xticklabels={Handcoded, inPlace, FlatBuf, ProtoBuf, Boost, Bson, MessagePack, Bincode, Json, FlexBuf, Bson, Json+Gzip, Json, Bson, Default, ProtoBuf, ByteBuffer, FlatBuf, Kryo},  		   
+		symbolic x coords={ HandcodedCPP, ProtoBufCPP,  FlatBufCPP,inPlaceCPP, BoostBinaryCPP, BoostCPP, BsonCPP, BincodeRust, MessagePackRust, JsonRust, FlexBufRust, BsonRust,
+		ProtoBufJava,FlatBufJava,KryoJava,ByteBufferJava,BsonJava,DefaultJava,JsonJava,Json+GzipJava},		   
+		xticklabels={HandCoded, ProtoBuf,FlatBuf,InPlace, BoostBinary, BoostText, Bson, Bincode, MessagePack, Json, FlexBuf, Bson, ProtoBuf,FlatBuf,Kryo,ByteBuffer,Bson,Default,Json,Json+Gzip},  		   
 		point meta=rawy,            
 		nodes near coords={%
     		\pgfmathprintnumberto[fixed,assume math mode=true,precision=1]{\pgfplotspointmeta}{\myval}%
@@ -156,8 +158,8 @@
 		legend image code/.code={\draw [#1] (0cm,-0.1cm) rectangle (0.20cm,0.20cm); },
 		xticklabel style={name=T\ticknum}			
 ]
-\addDiagramExpOne{CPP}{black}{white}{0.23\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
-\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
+\addDiagramExpOne{CPP}{black}{white}{0.26\textwidth}{{10,100,1000}}{{10,100,1000}}{{enlarge x limits=0.15,}};	
+\node [draw=none,inner sep=3, fill=lightgray!50, text width=0.17\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {C++};
 
 \addDiagramExpOne{Rust}{black}{color7}{0.21\textwidth}{}{}{{enlarge x limits=0.18,}};
 \node [draw=none,inner sep=3, fill=lightgray!50, text width=0.134\textwidth,align=center,font=\scriptsize, anchor=west](leg1) at (rel axis cs: 0.00,0.955) {Rust};
@@ -168,7 +170,7 @@
 
 \end{groupplot}
 
-\node [draw=none,inner sep=0, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.5cm,0.3cm)$) {\shortstack[l]{
+\node [draw=lightgray,inner sep=0.5mm, font=\scriptsize, anchor=west](leg1) at ($(group c2r1.north west) + (-0.5cm,0.3cm)$) {\shortstack[l]{
 		\ref{CPUJava} CPU \ \ \  
 		\ref{IOJava} I/O (HDD + Network)
 }};
