--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,12 +283,15 @@
     "    network_results = [f'{root_path}/CPP_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Java_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Rust_Experiment4_Network_ExternalSort_times.dat'] \n",
-    "    # externalsort_results = [f'{root_path}/Experiment3b_ExternalSort_times.dat']                   \n",
+    "                       \n",
+    "    externalsort_results = [f'{root_path}/CPP_Experiment3b_ExternalSort_times.dat',\n",
+    "                            f'{root_path}/Java_Experiment3b_ExternalSort_times.dat',\n",
+    "                            f'{root_path}/Rust_Experiment3b_ExternalSort_times.dat']                   \n",
     "   \n",
     "    # read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
     "    # load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
     "    network_header = [\"baseline\",\"language\",\"execution\",\"time\"]  \n",
-    "    #externalsort_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"chunk_size\",\"nrow\",\"time\"]  \n",
+    "    externalsort_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"chunk_size\",\"nrow\",\"time\"]  \n",
     "\n",
     "    baselines = [\"DefaultJava\",\"Json+GzipJava\",\"BsonJava\",\"ProtoBufJava\",\"KryoJava\",\"ByteBufferJava\",\"JsonJava\",\"FlatBuffersJava\",\n",
     "                \"HandcodedCPP\",\"inPlaceCPP\",\"BoostCPP\", \"BoostBinaryCPP\",\"ProtoBufCPP\",\"BsonCPP\",\"FlatBufCPP\",\n",
@@ -308,7 +311,7 @@
     "    # df_read = merge_results(read_results)\n",
     "    # df_load = merge_results(load_to_memory_results)   \n",
     "    df_network = merge_results(network_results)   \n",
-    "    # df_externalsort = merge_results(externalsort_results)   \n",
+    "    df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
     "    # df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
     "    #                                   seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
@@ -333,7 +336,7 @@
     "\n",
     "    df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
-    "    # df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
+    "    df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
     "        \n",
     "               \n",
     "    # df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
@@ -343,7 +346,7 @@
     "    # df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
     "    # df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
     "    df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
-    "#    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
+    "    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
     "\n",
     "\n",
@@ -352,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
