Final Local and Network External Sort Plots

--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -273,20 +273,20 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 %         \caption{Experiment2: Parallel (legend)}
 % \end{figure*}
 
-\tikzsetnextfilename{Exp5_network}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp5_network}
-        \caption{Experiment5: (Network)}
-\end{figure*}
-
-
-% \tikzsetnextfilename{Exp4_externalsort}
+% \tikzsetnextfilename{Exp5_network}
 %     \begin{figure*}[h]
 %         \centering
-%         \input{figures/Exp4_externalsort}
-%         \caption{Experiment4: (Externalsort)}
+%         \input{figures/Exp5_network}
+%         \caption{Experiment5: (Network)}
 % \end{figure*}
+
+
+\tikzsetnextfilename{Exp4_externalsort}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp4_externalsort}
+        \caption{Experiment4: (Externalsort)}
+\end{figure*}
 
 
 \maketitle
