--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,38 +146,34 @@
     "\n",
     "                            list_load = np.array(df_load['time'].tolist())  \n",
     "\n",
-    "\n",
     "                            if len(list_total) > 0:\n",
+    "                                time_total = calc_mean(list=list_total)                                               \n",
+    "                                base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")                                    \n",
+    "                                if execution == \"CPU\" :  \n",
+    "                                    time_load = calc_mean(list=list_load)                                                      \n",
+    "                                    total = time_total - time_load \n",
     "                                     \n",
-    "                                    time_total = calc_mean(list=list_total)    \n",
-    "                                    time_cpu_io = calc_mean(list=list_cpu_io)                                 \n",
-    "                                    \n",
-    "                                    base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")                                    \n",
-    "                                    if execution == \"CPU\" :                                                     \n",
-    "                                        time_load = calc_mean(list=list_load)                         \n",
-    "                                        total = time_total - time_load \n",
-    "                                        io  = time_total - time_cpu_io\n",
-    "                                        if io <= 0.1:\n",
-    "                                            io=0.1\n",
-    "\n",
-    "                                        cpu  = time_cpu_io - time_load\n",
-    "                                        if cpu <= 0.1:\n",
-    "                                            cpu=0.1\n",
-    "                                     \n",
-    "                                    elif execution == \"IO\":                                 \n",
+    "                                elif execution == \"IO\":                                 \n",
     "                                        total = time_total\n",
+    "\n",
+    "                                result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total/rate:.2f}']    \n",
+    "                                df_final.loc[len(df_final)] = result_total    \n",
+    "                                 \n",
+    "\n",
+    "                            if len(list_cpu_io) > 0:\n",
+    "                                    time_cpu_io = calc_mean(list=list_cpu_io)                                                                     \n",
+    "                                    base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")                                    \n",
+    "                                    if execution == \"CPU\" :\n",
+    "                                        io  = time_total - time_cpu_io\n",
+    "                                        cpu  = time_cpu_io - time_load\n",
+    "                                     \n",
+    "                                    elif execution == \"IO\":                                           \n",
     "                                        cpu = time_total - time_cpu_io       \n",
     "                                        io = time_cpu_io\n",
-    "                                        if cpu< 0.1:\n",
-    "                                            cpu=0.1\n",
-    "                                        if io<= 0.1:\n",
-    "                                            io=0.1    \n",
-    "\n",
-    "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total/rate:.2f}']\n",
+    "                                    \n",
     "                                    result_cpu = [base,language,taskset,'CPU',platform,seq_rand,nrow,f'{cpu/rate:.2f}']\n",
     "                                    result_io = [base,language,taskset,\"IO\",platform,seq_rand,nrow,f'{io/rate:.2f}']    \n",
-    "\n",
-    "                                    df_final.loc[len(df_final)] = result_total\n",
+    "                                    \n",
     "                                    df_final.loc[len(df_final)] = result_cpu\n",
     "                                    df_final.loc[len(df_final)] = result_io\n",
     "\n",
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,17 +265,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "def results():\n",
     "    root_path = '../archive/results'    \n",
     "\n",
-    "    # write_results = [f'{root_path}/Java_Experiment1_Write_times.dat',\n",
-    "    #                 f'{root_path}/Experiment1_Write_times.dat']\n",
-    "    # read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
-    "    # load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
+    "    write_results = [f'{root_path}/Java_Experiment1_Write_times.dat',\n",
+    "                     f'{root_path}/CPP_Experiment1_Write_times.dat']\n",
+    "\n",
+    "    read_results = [f'{root_path}/Java_Experiment2_Read_times.dat',\n",
+    "                    f'{root_path}/CPP_Experiment2_Read_times.dat']\n",
+    "\n",
+    "    load_to_memory_results = [f'{root_path}/Java_Experiment1_LoadToMemory_times.dat',\n",
+    "                              f'{root_path}/CPP_Experiment1_LoadToMemory_times.dat']\n",
+    "\n",
     "    network_results = [f'{root_path}/CPP_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Java_Experiment4_Network_ExternalSort_times.dat',\n",
     "                       f'{root_path}/Rust_Experiment4_Network_ExternalSort_times.dat'] \n",
@@ -288,8 +289,8 @@
     "                            f'{root_path}/Java_Experiment3b_ExternalSort_times.dat',\n",
     "                            f'{root_path}/Rust_Experiment3b_ExternalSort_times.dat']                   \n",
     "   \n",
-    "    # read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
-    "    # load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
+    "    read_write_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"platform\",\"seq_rand\",\"nrow\",\"time\"]      \n",
+    "    load_to_memory_header = [\"language\",\"platform\",\"taskset\",\"nrow\",\"time\"]\n",
     "    network_header = [\"baseline\",\"language\",\"execution\",\"time\"]  \n",
     "    externalsort_header = [\"baseline\",\"language\",\"taskset\",\"execution\",\"chunk_size\",\"nrow\",\"time\"]  \n",
     "\n",
@@ -307,46 +308,42 @@
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
     "\n",
-    "    # df_write = merge_results(write_results)    \n",
-    "    # df_read = merge_results(read_results)\n",
-    "    # df_load = merge_results(load_to_memory_results)   \n",
+    "    df_write = merge_results(write_results)    \n",
+    "    df_read = merge_results(read_results)\n",
+    "    df_load = merge_results(load_to_memory_results)   \n",
     "    df_network = merge_results(network_results)   \n",
     "    df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
-    "    # df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "    #                                   seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
+    "    df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "                                       seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
     "\n",
-    "    # df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
-    "    #                                   seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
+    "    df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
     "\n",
     "\n",
-    "    # df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "    #                                    seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
+    "    df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "                                       seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
     "\n",
-    "    # df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
-    "    #                                    seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "    df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"], seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
     "\n",
-    "    # df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
-    "    #                                    seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "    df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
     "\n",
-    "    # df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
-    "    #                                    seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
+    "    df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"], seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
     "\n",
     "                         \n",
     "\n",
-    "    df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
+    "    # df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
-    "    df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
+    "    # df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
     "        \n",
     "               \n",
-    "    # df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
-    "    # df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
-    "    # df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
-    "    # df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
-    "    # df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
-    "    # df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
-    "    df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
-    "    df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
+    "    df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
+    "    df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
+    "    df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
+    "    df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
+    "    df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
+    "    df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
+    "    # df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
+    "    # df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
     "\n",
     "\n",
@@ -355,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
